// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by consultation: user1 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMDc=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMDY=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMTA=",
          },
        },
      ],
      "totalCount": 5,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by consultation: user2 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uNA==",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTEx",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTEy",
          },
        },
      ],
      "totalCount": 43,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by consultation: user5 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uNTQ=",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by project: user1 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uMg==",
          },
        },
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uMQ==",
          },
        },
        Object {
          "node": Object {
            "__typename": "SourceVote",
            "id": "60000",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTI=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTM=",
          },
        },
      ],
      "totalCount": 104,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by project: user2 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by project: user5 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Proposal",
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMw==",
          },
        },
        Object {
          "node": Object {
            "__typename": "Proposal",
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMg==",
          },
        },
        Object {
          "node": Object {
            "__typename": "ProposalVote",
            "id": "1002",
          },
        },
        Object {
          "node": Object {
            "__typename": "Proposal",
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by step: user1 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uMg==",
          },
        },
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uMQ==",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTI=",
          },
        },
      ],
      "totalCount": 104,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by step: user2 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by step: user5 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions of different types on contribuable: user1 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uMQ==",
          },
        },
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uMg==",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions of different types on contribuable: user2 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNzY=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNzc=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNzg=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNzk=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxODA=",
          },
        },
      ],
      "totalCount": 22,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions of different types on contribuable: user5 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTE=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTM1",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTM2",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions of different types: user1 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uMg==",
          },
        },
        Object {
          "node": Object {
            "__typename": "Opinion",
            "id": "T3BpbmlvbjpvcGluaW9uMQ==",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions of different types: user2 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMDU=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMDI=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMDA=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxOTk=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Argument",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxOTg=",
          },
        },
      ],
      "totalCount": 27,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions of different types: user5 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTE=",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTMx",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTM1",
          },
        },
        Object {
          "node": Object {
            "__typename": "Source",
            "id": "U291cmNlOnNvdXJjZTM2",
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;
